<resources>
    <string name="app_name">便捷记账本</string>
    <string name="title_home">账单</string>
    <string name="title_chart">图表</string>
    <string name="title_set">设置</string>
    <string name="drawer_item_day">单日账单</string>
    <string name="drawer_item_month">月度账单</string>
    <string name="drawer_item_year">年度账单</string>
    <string name="drawer_item_scan">扫码记账</string>
    <string name="drawer_item_income">收入资产设置</string>
    <string name="drawer_item_outcome">支出资产设置</string>
    <string name="drawer_item_max">预算设置</string>
    <string name="drawer_item_user">账户设置</string>
    <string name="drawer_item_alarm">提醒设置</string>
    <string name="drawer_item_about">关于应用</string>
    <string name="drawer_chart_pie_in">当前收入饼状图</string>
    <string name="drawer_chart_pie_out">当前支出饼状图</string>
    <string name="drawer_chart_column_year">年度收入支出柱状图</string>
    <string name="drawer_table_year_in">年度收入报表</string>
    <string name="drawer_table_year_out">年度支出报表</string>
    <string name="title_chart_pie">饼状图</string>
    <string name="title_chart_null">需要数据</string>
    <string name="chart_null_hint">账单页没有相关数据\n无法显示图表\请选择有账单的时期后再试</string>
    <string name="fl_menu_add_income">增加一则收入</string>
    <string name="fl_menu_add_outcome">增加一则支出</string>
    <string name="fl_menu_choseday">选择日期</string>
    <string name="fl_menu_chosemonth">选择月份</string>
    <string name="fl_menu_choseyear">选择年度</string>
    <string name="fl_menu_sort">分类查看</string>
    <string name="fl_menu_chart">查看占比图表</string>
    <string name="fl_menu_line_chart">查看柱状图表</string>
    <string name="time_income">收入日期</string>
    <string name="time_outcome">支出日期</string>
    <string name="fromtype_hint">请选择账户类型</string>
    <string name="time_income_hint">请选择收入日期</string>
    <string name="time_outcome_hint">请选择支出日期</string>
    <string name="type_income_hint">请选择收入类型</string>
    <string name="type_outcome_hint">请选择支出类型</string>
    <string name="acount_handle_title">请选择操作</string>
    <string name="add_income">增加收入资产项</string>
    <string name="add_income_hint">请输入收入资产项名称</string>
    <string name="update_income">修改收入资产项</string>
    <string name="update_income_hint">请输入新的收入资产项名称</string>
    <string name="modify_income">修改收入项</string>
    <string name="modify_outcome">修改支出项</string>
    <string name="add_pay">增加支付账户</string>
    <string name="add_pay_hint">请输入支付账户名称</string>
    <string name="update_pay">修改支付账户</string>
    <string name="update_pay_hint">请输入新的支付账户名称</string>
    <string name="add_outcome">增加支出资产项</string>
    <string name="add_outcome_hint">请输入支出资产项名称</string>
    <string name="update_outcome">修改支出资产项</string>
    <string name="update_outcome_hint">请输入支出资产项名称</string>
    <string name="limit_day">日预算限额</string>
    <string name="limit_month">月预算限额</string>
    <string name="limit_year">年预算限额</string>
    <string name="limit_set">设置限额</string>
    <string name="input_empty"></string>
    <string name="dialog_message_title">提示</string>
    <string name="dialog_OK">确定</string>
    <string name="dialog_Cancel">取消</string>
    <string name="dialog_error_title">错误</string>
    <string name="dialog_message_success">成功</string>
    <string name="dialog_text_wait">请等待</string>
    <string name="dialog_add_sure">确定添加</string>
    <string name="dialog_add_cancel">取消添加</string>
    <string name="dialog_update_sure">确定修改</string>
    <string name="dialog_update_cancel">取消修改</string>
    <string name="dialog_chose_sure">确认选择</string>
    <string name="dialog_chose_cancel">取消选择</string>
    <string name="login_input_username">请输入登录用户名</string>
    <string name="login_input_nickname">请输入姓名</string>
    <string name="login_input_tel">请输入手机号码</string>
    <string name="login_input_user_password">请输入密码</string>
    <string name="login_input_manager_code">以防恶意注册请输入管理员校验码</string>
    <string name="login_button_login">登录</string>
    <string name="pwd_remember">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="login_button_register">注册账号</string>
    <string name="login_button_forget_password">忘记密码</string>
    <string name="login_button_reset_password">重置密码</string>
    <string name="error_login_error">登录失败，请确认用户名密码后重试</string>
    <string name="register_input_user_password_again">请再次输入密码</string>
    <string name="register_input_user_email">请输入注册E-mail地址</string>
    <string name="error_register_password_not_equals">两次输入密码不一致，请重新输入</string>
    <string name="error_register_password_null">密码不可为空</string>
    <string name="error_registerRe_password_null">确认密码不可为空</string>
    <string name="error_register_user_name_null">用户名不可为空</string>
    <string name="error_modify_old_password_null">原密码不可为空</string>
    <string name="error_modify_new_password_null">新密码不可为空</string>
    <string name="error_password_length_short">密码长度不可小于6</string>
    <string name="error_day_max_null">日预算不可为空</string>
    <string name="error_month_max_null">月预算不可为空</string>
    <string name="error_year_max_null">年预算不可为空</string>
    <string name="error_register_email_address_null">E-mail地址不可空</string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
    <string name="success_register_success">注册成功</string>
    <string name="loginout_info">确定注销并返回登录界面吗?</string>
    <string name="exit_again">再按一次返回键退出本应用</string>
    <string name="loginout">退出当前账号</string>
    <string name="error_register_email_invalid">邮箱地址错误</string>
    <string name="error_register_phone_invalid">电话号码格式错误</string>
    <string name="pie_chart_view">查看统计图表</string>
    <string name="alarm_title">每日提醒时间：</string>
    <string name="come_mark">备注</string>
    <string name="from_type">账户类型</string>
    <string name="type_income">收入类型</string>
    <string name="type_outcome">支出类型</string>
    <string name="money_income">收入金额</string>
    <string name="money_outcome">支出金额</string>
    <string name="dialog_del_title">确定删除么?</string>
    <string name="oyt_app_sure">确定退出应用么?</string>
    <string name="month_max_set">设置单月最高支出额</string>
    <string name="month_max_alert">本月支出已超支</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="month_max">单月最高支出金额:</string>
    <string name="month_max_hint">请输入单月最高支出金额</string>
    <string name="pwd_modify">修改密码</string>
    <string name="pwd_modify_old_hint">请输入旧密码</string>
    <string name="pwd_modify_new_hint">请输入新密码</string>
    <string name="pwd_modify_new_hint_repeat">请再次输入新密码</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
</resources>