<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_caodi"
    android:fadingEdge="none"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:padding="6dip"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:shadowColor="#ffffffff"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28.0dip"
            android:layout_marginTop="16dp"
            android:layout_marginRight="28.0dip"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_userName"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="#ffff"
                android:hint="@string/login_input_username"
                android:inputType="textEmailAddress"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingLeft="12.0dip"
                android:textColor="#ff1d1d1d"
                android:textColorHint="#ff666666"
                android:textSize="16.0sp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText_userPassword"
                    android:layout_width="0dp"
                    android:layout_height="44.0dip"
                    android:layout_weight="1"
                    android:background="#ffff"
                    android:gravity="center_vertical"
                    android:hint="@string/login_input_user_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:paddingLeft="12.0dip"
                    android:textColor="#ff1d1d1d"
                    android:textColorHint="#ff666666"
                    android:textSize="16.0sp" />
                <ToggleButton
                    android:id="@+id/loginToggle"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/selector_toggle_pwd_checked"
                    android:textOn=""
                    android:textOff="" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28.0dip"
            android:layout_marginTop="6.0dip"
            android:layout_marginRight="28.0dip"
            android:background="@drawable/selector_btn_blue"
            android:gravity="center"
            android:paddingTop="6dp"
            android:text="@string/login_button_login"
            android:textColor="#fff"
            android:textSize="20.0sp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="28.0dip"
    android:layout_marginRight="28.0dip"
    android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_rememberpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_checkbox_pwd"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd_remember"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_checkbox_pwd"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_login"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/button_register"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:background="#00ffff"
                android:gravity="center"
                android:text="@string/login_button_register"
                android:textColor="#000"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/login_button_reset_password"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="#00ffff"
                android:gravity="center"
                android:text="@string/login_button_reset_password"
                android:textColor="#000"
                android:textSize="14.0sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>