<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/rl_top_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dip"
            android:background="@drawable/selector_btn_back" />

        <TextView
            android:id="@+id/tx_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_button_reset_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editText_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_et"
        android:ems="10"
        android:hint="@string/login_input_username"
        android:textColor="#000"
        android:textColorHint="#666"
        android:textSize="15sp"></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_et"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_pwd_old"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/pwd_modify_old_hint"
            android:inputType="textPassword"
            android:textColor="#000"
            android:textColorHint="#666"
            android:textSize="15sp"></EditText>

        <ToggleButton
            android:id="@+id/modify_toggle_one"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:background="@drawable/selector_toggle_pwd_checked"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_et"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_pwd_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/pwd_modify_new_hint"
            android:inputType="textPassword"
            android:textColor="#000"
            android:textColorHint="#666"
            android:textSize="15sp"></EditText>

        <ToggleButton
            android:id="@+id/modify_toggle_two"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:background="@drawable/selector_toggle_pwd_checked"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_et"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_pwd_new_repeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/pwd_modify_new_hint_repeat"
            android:inputType="textPassword"
            android:textColor="#000"
            android:textColorHint="#666"
            android:textSize="15sp"></EditText>

        <ToggleButton
            android:id="@+id/modify_toggle_three"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:background="@drawable/selector_toggle_pwd_checked"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_pwd_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_pwd_new_repeat"
        android:layout_alignLeft="@+id/et_pwd_new_repeat"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_btn_blue"
        android:paddingTop="10dp"
        android:text="@string/pwd_modify"
        android:textColor="@color/text"
        android:textSize="18sp" />

</LinearLayout>