<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_top"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/rl_top_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dip"
                android:background="@drawable/selector_btn_back" />

            <TextView
                android:id="@+id/tx_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_button_register"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_register_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_et"
                    android:ems="10"
                    android:hint="@string/login_input_username"
                    android:textColor="#000"
                    android:textColorHint="#666"
                    android:textSize="15sp"></EditText>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_et"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editText_register_userPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_below="@+id/editText_register_username"
                        android:layout_alignLeft="@+id/editText_register_username"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/login_input_user_password"
                        android:inputType="textPassword"
                        android:textColor="#000"
                        android:textColorHint="#666"
                        android:textSize="15sp"></EditText>

                    <ToggleButton
                        android:id="@+id/register_toggle_one"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/selector_toggle_pwd_checked"
                        android:textOff=""
                        android:textOn="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_et"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editText_register_userPassword_again"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_below="@+id/editText_register_userPassword"
                        android:layout_alignLeft="@+id/editText_register_userPassword"
                        android:background="@null"
                        android:ems="10"
                        android:layout_gravity="center"
                        android:hint="@string/register_input_user_password_again"
                        android:inputType="textPassword"
                        android:textColor="#000"
                        android:textColorHint="#666"
                        android:textSize="15sp"></EditText>

                    <ToggleButton
                        android:id="@+id/register_toggle_two"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/selector_toggle_pwd_checked"
                        android:textOff=""
                        android:textOn="" />
                </LinearLayout>

                <Button
                    android:id="@+id/button_i_need_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText_register_userPassword_again"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/selector_btn_blue"
                    android:paddingTop="10dp"
                    android:text="@string/login_button_register"
                    android:textColor="@color/text"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>